tests/baselines/reference/parserComputedPropertyName11.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName11.ts(2,4): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName11.ts (1 errors) ====
    class C {
       [e]();
       ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }